# underwater_simulation

./: .travis.rosinstall  .travis.yml  README.md  rosdep.yaml  setup.sh  stack.xml
Documentation/: Issues.md
QtUWSim/: CMakeLists.txt  handsDB  mainpage.dox  manifest.xml
QtUWSim/mosaics/: UWSimScene.dtd  mosaic.xml
QtUWSim/src/: CustomTabPlaneDragger.cpp  CustomTabPlaneDragger.h  CustomTabPlaneTrackballDragger.cpp  CustomTabPlaneTrackballDragger.h  CustomTrackballDragger.cpp  CustomTrackballDragger.h  GraspSpecification.cpp  GraspSpecification.h  HandInteractiveMarker.cpp  HandInteractiveMarker.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MosaicEventHandler.h  MosaicManipulator.cpp  MosaicManipulator.h  PlanarGraspSpec.cpp  PlanarGraspSpec.h  QtViewerWidget.h  handsDB.h  joint_state_listener.cpp  main.cpp
UWSim/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml  simdev_plugins.xml
UWSim/data/scenes/: ARM5Hand-ros.urdf  ARM5Hand.urdf  UNIBOHand-ros.urdf  UNIBOHand.urdf  UWSimScene.dtd  cirs.xml  cirs_sls.xml  cirs_stereo.xml  g500ARM5-ros.urdf  g500ARM5.urdf  g500ARM5.xml  g500ARM5_laser.urdf  g500ARM5_sls.urdf  init.xml  shipwreck_sls.xml  ujione-rviz.urdf  ujione.urdf
UWSim/data/shaders/: default_scene.frag  default_scene.vert
UWSim/interface_examples/: gotoAbsolutePose.cpp  gotoRelativePose.cpp  makeVehicleSurvey.cpp  setJointPosition.cpp  setJointVelocity.cpp  setVehicleActuators.cpp  setVehicleDisturbances.cpp  setVehiclePose.cpp  setVehiclePosition.cpp  setVehicleTwist.cpp  setVehicleVelocity.cpp
UWSim/src/: BulletPhysics.cpp  BulletPhysics.h  ConfigXMLParser.cpp  ConfigXMLParser.h  CustomWidget.h  DVLSensor.cpp  DVLSensor.h  EventHandler.h  GPSSensor.cpp  GPSSensor.h  HUDCamera.cpp  HUDCamera.h  InertialMeasurementUnit.cpp  InertialMeasurementUnit.h  KinematicChain.cpp  KinematicChain.h  MultibeamSensor.cpp  MultibeamSensor.h  ObjectPicker.cpp  ObjectPicker.h  PhysicsBuilder.cpp  PhysicsBuilder.h  PressureSensor.cpp  PressureSensor.h  ROSInterface.cpp  ROSInterface.h  SceneBuilder.cpp  SceneBuilder.h  ServerInterface.cpp  ServerInterface.h  SimDev_Echo.cpp  SimDev_Echo.h  SimulatedDevice.h  SimulatedDevice_Echo.cpp  SimulatedDevice_Echo.h  SimulatedDevice_EchoImpl.h  SimulatedDevices.cpp  SimulatedDevices.h  SimulatedIAUV.cpp  SimulatedIAUV.h  (+21 more)
UWSim/src/BulletHfFluid/: BuoyantShapeConvexCollisionAlgorithm.cpp  btHfFluid.cpp  btHfFluidBuoyantShapeCollisionAlgorithm.cpp  btHfFluidCollisionShape.h  btHfFluidRigidCollisionAlgorithm.cpp  btHfFluidRigidCollisionConfiguration.cpp  btHfFluidRigidCollisionConfiguration.h
osgBullet/: Makefile  manifest.xml  osgBullet_02_00_00.patch  osgBullet_02_00_00.tar.gz.md5sum
osgOcean/: Makefile  mainpage.dox  manifest.xml  osgOcean-1.0.1.patch  osgOcean-Source-1.0.1.rar.md5sum
osgWorks/: Makefile  mainpage.dox  manifest.xml  osgWorks_02_00_00.tar.gz.md5sum  osgWorks_isTransparent.patch
underwater_sensor_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
underwater_sensor_msgs/msg/: LedLight.msg
underwater_vehicle_dynamics/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
underwater_vehicle_dynamics/config/: dynamics_g500.yaml
uwsim/: CHANGELOG.rst  CMakeLists.txt  package.xml  saveDataFile.sh  simdev_plugins.xml
uwsim/data/scenes/: UWSimScene.dtd  cirs.xml  cirs_profiler.xml  cirs_sls.xml  cirs_stereo.xml  g500ARM5.urdf  g500ARM5.urdf.xacro  g500ARM5_laser.urdf  installScene  shipwreck.xml  xacroExample.xml
uwsim/data/scenes/launch/: cuba_aruco.launch  cuba_aruco.rviz  demo-hil.launch  demo-sitl.launch  netsim_cirs.launch  netsin_cirs.launch
uwsim/data/shaders/: default_scene.frag
uwsim/examples/: commsDeviceExampleScene.xml
uwsim/include/uwsim/: AcousticCommsChannel.h  AcousticCommsDevice.h  BulletPhysics.h  CommsDevice.h  ConfigXMLParser.h  CustomCommsChannel.h  CustomCommsDevice.h  DVLSensor.h  DredgeTool.h  EventHandler.h  ForceSensor.h  GPSSensor.h  InertialMeasurementUnit.h  KinematicChain.h  LedArray.h  MultibeamSensor.h  NED.h  NetSim.h  ObjectPicker.h  PressureSensor.h  ProfilingSonar.h  ROSInterface.h  ROSSceneBuilder.h  SceneBuilder.h  SimDev_Echo.h  SimulatedDevice.h  SimulatedDevices.h  SimulatedIAUV.h  SimulatorConfig.h  SkyDome.h  SphereSegment.h  TrajectoryVisualization.h  URDFRobot.h  UWSimUtils.h  ViewBuilder.h  VirtualCamera.h  VirtualRangeSensor.h  VirtualSLSProjector.h  osgPCDLoader.h
uwsim/include/uwsim/BulletHfFluid/: BuoyantShapeConvexCollisionAlgorithm.h  btHfFluid.h  btHfFluidBuoyantConvexShape.h  btHfFluidBuoyantShapeCollisionAlgorithm.h  btHfFluidCollisionShape.h  btHfFluidRigidCollisionAlgorithm.h  btHfFluidRigidCollisionConfiguration.h  btHfFluidRigidDynamicsWorld.h
uwsim/interface_examples/: followMarker.cpp  gotoAbsolutePose.cpp  gotoRelativePose.cpp  makeVehicleSurvey.cpp  setJointPosition.cpp  setJointVelocity.cpp  setVehicleDisturbances.cpp  setVehiclePose.cpp  setVehiclePosition.cpp  setVehicleTwist.cpp  setVehicleVelocity.cpp
uwsim/src/: AcousticCommsChannel.cpp  AcousticCommsDevice.cpp  BulletPhysics.cpp  CommsDevice.cpp  ConfigXMLParser.cpp  ConfigXMLParser.h  CustomCommsChannel.cpp  CustomCommsDevice.cpp  DVLSensor.cpp  DredgeTool.cpp  EventHandler.h  ForceSensor.cpp  GPSSensor.cpp  HUDCamera.cpp  InertialMeasurementUnit.cpp  InertialMeasurementUnit.h  KinematicChain.cpp  KinematicChain.h  LedArray.cpp  MultibeamSensor.cpp  NED.cpp  NetSim.cpp  ObjectPicker.cpp  ObjectPicker.h  PhysicsBuilder.cpp  PressureSensor.cpp  ProfilingSonar.cpp  ROSInterface.cpp  ROSInterface.h  ROSSceneBuilder.cpp  SceneBuilder.cpp  SimDev_Echo.cpp  SimulatedDevices.cpp  SimulatedIAUV.cpp  SimulatorConfig.h  SimulatorConfig.h.cmake  SkyDome.cpp  SphereSegment.cpp  TextHUD.h  URDFRobot.cpp  (+10 more)
uwsim/src/BulletHfFluid/: BuoyantShapeConvexCollisionAlgorithm.cpp  btHfFluid.cpp  btHfFluid.h  btHfFluidBuoyantConvexShape.cpp  btHfFluidBuoyantShapeCollisionAlgorithm.cpp  btHfFluidCollisionShape.cpp  btHfFluidRigidCollisionAlgorithm.cpp  btHfFluidRigidCollisionConfiguration.cpp  btHfFluidRigidDynamicsWorld.cpp
(+3 files in other folders)
