<?xml version="1.0"?>
<package>
  <name>underwater_sensor_msgs</name>
  <version>0.0.1</version>
  <description>Common messages for underwater robotics</description>

  <maintainer email="mprats@willowgarage.com">Mario Prats</maintainer>
  <author email="mprats@willowgarage.com">Mario Prats</author>

  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>

