<?xml version="1.0"?>
<package>
  <name>uwsim</name>
  <version>1.2.0</version>
  <description>
     UWSim is an UnderWater SIMulator for marine robotics research and development. UWSim visualizes an underwater virtual scenario that can be configured using standard modeling software. Controllable underwater vehicles, surface vessels and robotic manipulators, as well as simulated sensors, can be added to the scene and accessed externally through ROS interfaces. This allows to easily integrate the visualization tool with existing control architectures.
  </description>

  <author email="mprats@willowgarage.com">Mario Prats</author>
  <maintainer email="mprats@willowgarage.com">Mario Prats</maintainer>

  <license>GPL</license>
  <url>http://www.irs.uji.es/uwsim/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>uwsim_osgocean</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>underwater_sensor_msgs</build_depend> 
  <build_depend>uwsim_bullet</build_depend>
  <build_depend>uwsim_osgbullet</build_depend>
  <build_depend>uwsim_osgworks</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libxml++-2.6</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libopenscenegraph</build_depend>
  <build_depend>opengl</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>uwsim_osgocean</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>underwater_sensor_msgs</run_depend> 
  <run_depend>uwsim_bullet</run_depend>
  <run_depend>uwsim_osgbullet</run_depend>
  <run_depend>uwsim_osgworks</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libxml++-2.6</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>libopenscenegraph</run_depend>
  <run_depend>opengl</run_depend>

  <export>
    <uwsim plugin="${prefix}/simdev_plugins.xml" />
  </export>

</package>

